--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -14,4 +14,14 @@
     {%- endif %}
   </div>
 </section>
+<script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?2edb03066436cbf60b23b390cb4e14f0";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+  </script>
+  
 {%- endif %}
