--- a/_includes/common.html
+++ b/_includes/common.html
@@ -1,6 +1,15 @@
 <html lang='{{ data.meta.language | default: "en" }}' dir='{{ data.meta.direction | default: "ltr" }}'>
   <head>
     {%- include head.html %}
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?2edb03066436cbf60b23b390cb4e14f0";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+      </script>
   </head>
   <body>
     {%- if site.open %}
