--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,61 +1,66 @@
-{%- assign project = data.project %}
-{%- if project and project.show %}
-<section class="project" style="order: {{ project.order | default: 1 }}">
-  <div class="section-title">
-    <i class="section-icon fa-solid fa-folder-open"></i>
-    <h2>{{ project.title }}</h2>
-  </div>
+{%- assign publication = data.publication %} 
+{%- if publication and publication.show %} 
+<section class="publication" style="order: {{ publication.order | default: 1 }}"> 
+  <div class="section-title"> 
+    <i class="section-icon fa-solid fa-newspaper"></i> 
+    <h2>{{ publication.title }}</h2> 
+  </div> 
 
-  <div class="section-content">
-    {%- if project.description.size > 0 %}
-    <div class="description markdown">
-      {{ project.description | markdownify }}
-    </div>
-    {%- endif %}
+  <div class="section-content"> 
+    {%- if publication.description.size > 0 %} 
+    <div class="description markdown"> 
+      {{ publication.description | markdownify }} 
+    </div> 
+    {%- endif %} 
 
-    {%- if project.items %}
-    <div class="items">
-      {%- for item in project.items %}
-      <div class="item">
+    {%- if publication.items %} 
+    <div class="items"> 
+      {%- for item in publication.items %} 
+      <div class="item"> 
 
-        {%- if item.name %}
-        <div class="row">
-          <div class="project-name">
-            {%- if item.link %}
-            <a href="{{ item.link }}" target="_blank">{{ item.name }}</a>
-            {%- else %}
-            <span>{{ item.name }}</span>
-            {%- endif %}
-            {%- if item.tags %}
-            <small>[{{ item.tags }}]</small>
-            {%- endif %}
-          </div>
+        {%- if item.title %} 
+        <div class="publication-title"> 
+          {%- if item.link %} 
+          <a href="{{ item.link }}" target="_blank">{{ item.title }}</a> 
+          {%- else %} 
+          <span>{{ item.title }}</span> 
+          {%- endif %} 
+        </div> 
 
-          {%- if item.authors %}
-          <div class="authors">
-            <span>{{ item.authors }}</span>
-          </div>
-          {%- endif %}
-          
+        {%- if item.name %} 
+        <div class="name"> 
+          <span>{{ item.name }}</span> 
+        </div> 
+        {%- endif %} 
 
-          {%- if item.date %}
-          <div class="date">
-            <span>{{ item.date }}</span>
-          </div>
-          {%- endif %}
-        </div>
+        {%- if item.date %} 
+        <div class="date"> 
+          <span>{{ item.date }}</span> 
+        </div> 
+        {%- endif %} 
 
-        {%- if item.description.size > 0 %}
-        <div class="description markdown">
-          {{ item.description | markdownify }}
-        </div>
-        {%- endif %}
-        {%- endif %}
+        {%- if item.authors %} 
+        <div class="authors"> 
+          <span>{{ item.authors }}</span> 
+        </div> 
+        {%- endif %} 
 
-      </div>
-      {%- endfor %}
-    </div>
-    {%- endif %}
-  </div>
-</section>
+        {%- if item.conference %} 
+        <div class="conference"> 
+          <span>{{ item.conference }}</span> 
+        </div> 
+        {%- endif %} 
+        {%- if item.description.size > 0 %} 
+        <div class="description markdown"> 
+          {{ item.description | markdownify }} 
+        </div> 
+        {%- endif %} 
+        {%- endif %} 
+
+      </div> 
+      {%- endfor %} 
+    </div> 
+    {%- endif %} 
+  </div> 
+</section> 
 {%- endif %}
