--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,7 @@
 
 // Define defaults for each variable.
 $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-$base-font-size:   14px !default;
+$base-font-size:   12px !default;
 $base-font-weight: 400 !default;
 
 $small-font-size:  $base-font-size * 0.875 !default; // 14px
@@ -22,8 +22,8 @@ $content-width:    1000px !default;
 
 // Default color settings
 $text-color:        #333333;
-$text-second-color: #3a3d42;
-$text-third-color:  #8e9195;
+$text-second-color: #333333;
+$text-third-color:  #333333;
 $background-color:  #f5f5f5;
 $wrapper-color:     #ffffff;
 $heart-color:       #fb866a;
