--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -16,8 +16,9 @@
     {%- if publication.items %}
     <div class="items">
       {%- for item in publication.items %}
+      
       <div class="item">
-
+        <div class="row">
         {%- if item.title %}
         <div class="publication-title">
           {%- if item.link %}
@@ -25,6 +26,10 @@
           {%- else %}
           <span>{{ item.title }}</span>
           {%- endif %}
+          <div class="date">
+            <span>{{ item.date }}</span>
+          </div>
+        </div>
         </div>
 
         {%- if item.authors %}
